fix(wasm): resolve browser package issues in #249
- Copy pdfium_init.js to dist/pdfium.js during build to fix missing pdfium.js import
- Add @vite-ignore comments to dynamic fs/promises and tesseract-wasm imports
- Mark tesseract-wasm and node:fs/promises as external in tsup config to prevent bundling
- Update package.json exports to explicitly support browser and node environments
- Add pdfium.js to npm files list for publication

Fixes issue #249: Makes @kreuzberg/wasm package compatible with Vite/browser environments

--- a/crates/kreuzberg-wasm/package.json
+++ b/crates/kreuzberg-wasm/package.json
@@ -18,6 +18,26 @@
 	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
+			"browser": {
+				"import": {
+					"types": "./dist/index.d.ts",
+					"default": "./dist/index.js"
+				},
+				"require": {
+					"types": "./dist/index.d.cts",
+					"default": "./dist/index.cjs"
+				}
+			},
+			"node": {
+				"import": {
+					"types": "./dist/index.d.ts",
+					"default": "./dist/index.js"
+				},
+				"require": {
+					"types": "./dist/index.d.cts",
+					"default": "./dist/index.cjs"
+				}
+			},
 			"import": {
 				"types": "./dist/index.d.ts",
 				"default": "./dist/index.js"
@@ -97,6 +117,7 @@
 		"pkg",
 		"*.wasm",
 		"*.d.ts",
+		"pdfium.js",
 		"README.md"
 	],
 	"engines": {
