fix(node): resolve missing native binaries in npm/Docker (#241)
CRITICAL: Add optionalDependencies for 27 platform-specific packages.
Without these declarations, npm/pnpm failed to install platform packages
(@kreuzberg/node-linux-x64-gnu, @kreuzberg/node-darwin-arm64, etc),
causing "Cannot find native binding" errors in Docker/monorepo environments.

Changes:
- Add optionalDependencies for all platform variants to package.json
  (Android, Darwin/macOS, FreeBSD, Linux musl/glibc, OpenHarmony, Windows)
- Update .npmignore to allow distribution of package metadata while
  excluding development files and build artifacts
- Fix auto-generated index.js version references (4.0.0-rc.17 -> 4.0.0-rc.18)
  and error messages to match declared package version

How this fixes the issue:
1. npm/pnpm now installs platform packages via optionalDependencies
2. Runtime loader successfully resolves native binaries from node_modules
3. Version checks pass with synchronized 4.0.0-rc.18 across all packages
4. Works correctly in Docker, monorepo, and standard npm/pnpm setups

Testing:
- Verified optionalDependencies count: 27 platforms
- Confirmed version consistency: 26 rc.18 references, 0 rc.17 references
- Validated npm pack includes critical files
- Tested native binding loads on host platform

Fixes issue #241

--- a/crates/kreuzberg-node/.npmignore
+++ b/crates/kreuzberg-node/.npmignore
@@ -1,6 +1,18 @@
 node_modules
 target
 artifacts
-npm
 *.tgz
 *.log
+typescript
+tests
+Cargo.toml
+build.rs
+Cargo.lock
+tsconfig.json
+vitest.config.ts
+tsup.config.ts
+.eslintrc.json
+.prettierignore
+.prettierrc
+biome.json
+oxlintrc.json
