--- a/crates/kreuzberg-node/package.json
+++ b/crates/kreuzberg-node/package.json
@@ -115,5 +115,34 @@
 	"dependencies": {
 		"@emnapi/runtime": "1.7.1",
 		"which": "^6.0.0"
+	},
+	"optionalDependencies": {
+		"@kreuzberg/node-android-arm-eabi": "4.0.0-rc.18",
+		"@kreuzberg/node-android-arm64": "4.0.0-rc.18",
+		"@kreuzberg/node-darwin-arm64": "4.0.0-rc.18",
+		"@kreuzberg/node-darwin-x64": "4.0.0-rc.18",
+		"@kreuzberg/node-darwin-universal": "4.0.0-rc.18",
+		"@kreuzberg/node-freebsd-arm64": "4.0.0-rc.18",
+		"@kreuzberg/node-freebsd-x64": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-arm-gnueabihf": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-arm-musleabihf": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-arm64-gnu": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-arm64-musl": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-loong64-gnu": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-loong64-musl": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-ppc64-gnu": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-riscv64-gnu": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-riscv64-musl": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-s390x-gnu": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-x64-gnu": "4.0.0-rc.18",
+		"@kreuzberg/node-linux-x64-musl": "4.0.0-rc.18",
+		"@kreuzberg/node-openharmony-arm": "4.0.0-rc.18",
+		"@kreuzberg/node-openharmony-arm64": "4.0.0-rc.18",
+		"@kreuzberg/node-openharmony-x64": "4.0.0-rc.18",
+		"@kreuzberg/node-wasm32-wasi": "4.0.0-rc.18",
+		"@kreuzberg/node-win32-arm64-msvc": "4.0.0-rc.18",
+		"@kreuzberg/node-win32-ia32-msvc": "4.0.0-rc.18",
+		"@kreuzberg/node-win32-x64-gnu": "4.0.0-rc.18",
+		"@kreuzberg/node-win32-x64-msvc": "4.0.0-rc.18"
 	}
 }
